--- a/package.json
+++ b/package.json
@@ -26,13 +26,18 @@
     "url": "https://github.com/paulsonnentag/logolino/issues"
   },
   "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.0.20",
     "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.0.15",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
-    "webpack": "^1.12.2",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
