--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
     "css-loader": "^0.23.1",
+    "image-webpack-loader": "^1.6.3",
     "node-sass": "^3.4.2",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^3.2.0",
@@ -41,7 +42,10 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "react": "^0.14.6",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^0.14.6",
     "react-router": "^2.0.1"
   }
