--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^0.14.6",
     "react-dnd": "^2.1.4",
     "react-dnd-html5-backend": "^2.1.2",
+    "react-dnd-touch-backend": "^0.2.5",
     "react-dom": "^0.14.6",
     "react-router": "^2.0.1"
   }
