--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "howler": "^1.1.29",
+    "lodash": "^4.11.2",
     "react": "^0.14.6",
     "react-dnd": "^2.1.4",
     "react-dnd-touch-backend": "^0.2.5",
