--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "node server.js",
-    "build": "webpack webpack.config.js"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
