--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node server.js",
     "build": "webpack",
-    "publish": "cd build && git init && git add -A && git commit --amend -m 'Release' && git push --force && cd .."
+    "publish": "npm run build && cd build && git init && git add -A && git commit --amend -m 'Release' && git push --force && cd .."
   },
   "repository": {
     "type": "git",
